PvPGN Version History:

 Changelog for SVN TRUNK (since 1.8.1)
=========================================
 -- The list of changes mentioned in here is most propably incomplete.
 For more details also take a peek view into conversion-changelog.

[WOL]
  -- disable account creation via irc/wol when new_accounts=false
  -- added support to allow/deny WOL clients in bnconf.conf
  -- added support for battle clans
  -- added various protocol related fixes

[MISC]
  -- added /clan whisper subcommand

 ChangeLog for 1.8.1 (since 1.8.0)
=========================================

[WOL]
  -- fixed bug trying to join unexistent games
  -- fixed bug overflowing the max players game limit
  -- fixed bug of not showing Yuri's revenge channels
  -- added address translation support to servserv sent addresses
  -- added support for usage of /commands
  -- added apireg support

[WAR3]
  -- fixed possible server crash on ill-formated clan invitation reply packet
  -- properly display tourney wins/losses in account profile

[MISC]
  -- fixed d2dbs accepting d2gs connections from any ip
  -- fixed IRC /notice disc bug
  -- fixed warning and reactivated reconnecting when using mysql>=5.0.13
  -- fixed SC:BW string representation from "StarCraft: Broodwars"
  to "StarCraft: Brood War" (to better match battle.net behaviour)
  -- fixed possible server crash caused by /ipban command
  -- enforce (stricter) limit for maximum channel name length 
  -- fixed problems caused by login via uid
  -- added new "account_force_username" option to bnetd.conf

[VCHECK]
  -- added WAR3/W3XP IX86 1.21 vcheck entries
  -- added sc/bw IX86 and XMAC 1.15 version check entries

 ChangeLog for 1.8.0 (since 1.8.0rc2)
=========================================
[VCHECK]
  -- added sc/bw 1.13f/1.14 version check entries
  -- added WAR3/W3XP IX86 1.20d/1.20e vcheck entries

[D2]
  -- cleaned up some mess about dealing with D2 1.08 auth reply packets which 